<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/course_android"
        android:textStyle="bold"
        android:padding="8dp"
        android:background="#E3F2FD"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/course_russian"
        android:padding="8dp"
        android:background="#F3E5F5"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_front_db"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:background="#E8F5E9"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_faculty"
        android:padding="8dp"
        android:background="#FFF3E0"/>

</LinearLayout>