<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="80dp"
                app:cardElevation="8dp"
                app:strokeColor="#050505"
                app:strokeWidth="2dp"
                android:outlineProvider="background">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img"
                    android:contentDescription="Profile image"
                    android:clipToOutline="true" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_college"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="12dp"
            android:background="#FFEBEE"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_degree"
            android:textSize="20sp"
            android:padding="12dp"
            android:background="#E8EAF6"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_gpa"
            android:textSize="20sp"
            android:padding="12dp"
            android:background="#E0F2F1"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edu_location"
            android:textSize="20sp"
            android:padding="12dp"
            android:background="#FFF8E1"/>

    </LinearLayout>
</ScrollView>